<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jokeBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button_joke"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/zitatBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button_zitats"
        app:layout_constraintEnd_toEndOf="@+id/jokeBTN"
        app:layout_constraintStart_toStartOf="@+id/jokeBTN"
        app:layout_constraintTop_toBottomOf="@+id/jokeBTN" />

    <Button
        android:id="@+id/horoskopBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button_horoskop"
        app:layout_constraintEnd_toEndOf="@+id/zitatBTN"
        app:layout_constraintStart_toStartOf="@+id/zitatBTN"
        app:layout_constraintTop_toBottomOf="@+id/zitatBTN" />

    <Button
        android:id="@+id/musikBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/button_musik"
        app:layout_constraintEnd_toEndOf="@+id/horoskopBTN"
        app:layout_constraintStart_toStartOf="@+id/horoskopBTN"
        app:layout_constraintTop_toBottomOf="@+id/horoskopBTN" />

    <TextView
        android:id="@+id/directedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_copyright"
        app:layout_constraintBottom_toTopOf="@+id/versionTV"
        app:layout_constraintEnd_toEndOf="@+id/versionTV"
        app:layout_constraintStart_toStartOf="@+id/versionTV" />

    <TextView
        android:id="@+id/versionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_appversion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>